hphp/test/zend/good/Zend/tests/ns_071.php.expectf
NULL

Catchable fatal error: Argument 1 to foo\bar::__construct() must be of type ?HH\AnyArray, stdClass given in %s/ns_071.php on line 12
